adding lazy loading

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" loading="lazy" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" loading="lazy" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -37,7 +37,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
       <nav style="display:flex; justify-content:flex-end; align-items:center;">
-        <img src="assets/img/logo.png" alt="Logo" style="width:150px;">
+        <img src="assets/img/logo.png" loading="lazy" alt="Logo" style="width:150px;">
       </nav>
 
 
@@ -77,7 +77,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero_img.jpg" alt="لافيستا" data-aos="fade-in">
+      <img src="assets/img/hero_img.jpg" loading="lazy" alt="لافيستا" data-aos="fade-in">
 
 
       <div class="container d-flex flex-column align-items-center">
@@ -101,7 +101,7 @@
 
         <!-- Mobile: Image 1 -->
         <div class="d-lg-none mb-4 text-center">
-          <img src="assets/img/about1.jpg" class="img-fluid rounded-4" alt="لافيستا">
+          <img src="assets/img/about1.jpg" class="img-fluid rounded-4" loading="lazy" alt="لافيستا">
         </div>
 
         <div class="row gy-4">
@@ -111,7 +111,7 @@
 
             <!-- Hide image on desktop since it's shown above on mobile -->
             <div class="d-none d-lg-block mb-4">
-              <img src="assets/img/about2.jpg" class="img-fluid rounded-4"
+              <img src="assets/img/about2.jpg" class="img-fluid rounded-4"loading="lazy"
                 alt="لافيستا">
             </div>
 
@@ -179,7 +179,7 @@
 
               <!-- Image 2: Show below text on mobile, inline on desktop -->
               <div class="position-relative mt-4">
-                <img src="assets/img/about1.jpg" class="img-fluid rounded-4"
+                <img src="assets/img/about1.jpg" class="img-fluid rounded-4"loading="lazy"
                   alt="مدينة مصر للتطوير العقاري - صورة توضيحية">
               </div>
             </div>
@@ -334,7 +334,7 @@
           </div>
 
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/projects/El Patio Riva.jpeg" alt="لافيستا"
+            <img src="assets/img/projects/El Patio Riva.jpeg" alt="لافيستا"loading="lazy"
               class="img-fluid" style="height:400px; width: 100%; object-fit:cover;">
           </div>
 
@@ -474,7 +474,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/vida-r.jpg" alt="لافيستا"
+                        <img src="assets/img/projects/vida-r.jpg" alt="لافيستا"loading="lazy"
                           class="img-fluid">
                       </div>
 
@@ -570,7 +570,7 @@
                         </div>
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/hillSSS.jpg" alt="لافيستا"
+                        <img src="assets/img/projects/hillSSS.jpg" alt="لافيستا"loading="lazy"
                           class="img-fluid">
                       </div>
                     </div>
@@ -663,7 +663,7 @@
 
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/city.jpg" alt="Patio City"
+                        <img src="assets/img/projects/city.jpg" alt="Patio City"loading="lazy"
                           class="img-fluid">
                       </div>
                     </div>
@@ -828,7 +828,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/gardens.jpg" alt="لافيستا"
+                        <img src="assets/img/projects/gardens.jpg" alt="لافيستا"loading="lazy"
                           class="img-fluid">
                       </div>
 
@@ -951,7 +951,7 @@
                       
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/ray2 (1).jpg" alt="لافيستا"
+                        <img src="assets/img/projects/ray2 (1).jpg" alt="لافيستا"loading="lazy"
                           class="img-fluid">
                       </div>
                     </div>
@@ -1110,7 +1110,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/hikma.jpeg" alt="لافيستا"
+                        <img src="assets/img/projects/hikma.jpeg" alt="لافيستا"loading="lazy"
                           class="img-fluid">
                       </div>
 
@@ -1230,7 +1230,7 @@
 
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/eastbay.jpeg" alt="لافيستا"
+                        <img src="assets/img/projects/eastbay.jpeg" alt="لافيستا"loading="lazy"
                           class="img-fluid">
                       </div>
                     </div>
@@ -1364,7 +1364,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/solA.jpg" alt="لافيستا"
+                        <img src="assets/img/projects/solA.jpg" alt="لافيستا"loading="lazy"
                           class="img-fluid">
                       </div>
 
@@ -1461,7 +1461,7 @@
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
                         <img
-                          alt="لافيستا" class="img-fluid">
+                          alt="لافيستا" loading="lazy" class="img-fluid">
                       </div>
                     </div>
                     <div class="form-container" id="sarai-form">
@@ -1590,7 +1590,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/oct.webp" alt=" لافيستا"
+                        <img src="assets/img/projects/oct.webp" loading="lazy"alt=" لافيستا"
                           class="img-fluid">
                       </div>
 
@@ -1699,7 +1699,7 @@
       <div class="row gy-4 foot-navs">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <img src="assets/img/logo.png" alt="Logo" style="width:150px;">
+            <img src="assets/img/logo.png" loading="lazy"alt="Logo" style="width:150px;">
           </a>
           <div class="footer-contact pt-3">
             <p>
