--- a/thank_you.html
+++ b/thank_you.html
@@ -31,7 +31,7 @@
         }
 
         .thank-you h1 {
-            color: #ce2934;
+            color: #011E60;
             margin-bottom: 20px;
             font-size: 24px;
         }
