--- a/thank_you.html
+++ b/thank_you.html
@@ -46,7 +46,7 @@
         .thank-you a.home-btn {
             display: inline-block;
             padding: 12px 24px;
-            background-color: #ce2934;
+            background-color: #011E60;
             color: #fff;
             text-decoration: none;
             border-radius: 8px;
