--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
       <nav style="display:flex; justify-content:flex-end; align-items:center;">
-        <img src="assets/img/logo.png" loading="lazy" alt="Logo" style="width:150px;">
+        <img src="assets/img/logo (2).webp" loading="lazy" alt="Logo" style="width:150px;">
       </nav>
 
 
@@ -80,7 +80,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero_img.jpg" loading="lazy" alt="لافيستا" data-aos="fade-in">
+      <img src="assets/img/hero_img.webp" loading="lazy" alt="لافيستا" data-aos="fade-in">
 
 
       <div class="container d-flex flex-column align-items-center">
@@ -104,7 +104,7 @@
 
         <!-- Mobile: Image 1 -->
         <div class="d-lg-none mb-4 text-center">
-          <img src="assets/img/about1.jpg" class="img-fluid rounded-4" loading="lazy" alt="لافيستا">
+          <img src="assets/img/favicon.png" class="img-fluid rounded-4" loading="lazy" alt="لافيستا">
         </div>
 
         <div class="row gy-4">
@@ -114,7 +114,7 @@
 
             <!-- Hide image on desktop since it's shown above on mobile -->
             <div class="d-none d-lg-block mb-4">
-              <img src="assets/img/about2.jpg" class="img-fluid rounded-4" loading="lazy" alt="لافيستا">
+              <img src="assets/img/about1.webp" class="img-fluid rounded-4" loading="lazy" alt="لافيستا">
             </div>
 
             <h3
@@ -181,8 +181,8 @@
 
               <!-- Image 2: Show below text on mobile, inline on desktop -->
               <div class="position-relative mt-4">
-                <img src="assets/img/about1.jpg" class="img-fluid rounded-4" loading="lazy"
-                  alt="مدينة مصر للتطوير العقاري - صورة توضيحية">
+                <img src="assets/img/about2.webp" class="img-fluid rounded-4" loading="lazy"
+                  alt=" للتطوير العقاري - صورة توضيحية">
               </div>
             </div>
           </div>
@@ -336,7 +336,7 @@
           </div>
 
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/projects/El Patio Riva.jpeg" alt="لافيستا" loading="lazy" class="img-fluid"
+            <img src="assets/img/projects/El Patio Riva.webp" alt="لافيستا" loading="lazy" class="img-fluid"
               style="height:400px; width: 100%; object-fit:cover;">
           </div>
 
@@ -476,7 +476,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/vida-r.jpg" alt="لافيستا" loading="lazy" class="img-fluid">
+                        <img src="assets/img/projects/vida-r.webp" alt="لافيستا" loading="lazy" class="img-fluid">
                       </div>
 
                     </div>
@@ -570,7 +570,7 @@
                         </div>
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/hillSSS.jpg" alt="لافيستا" loading="lazy" class="img-fluid">
+                        <img src="assets/img/projects/hillSSS.webp" alt="لافيستا" loading="lazy" class="img-fluid">
                       </div>
                     </div>
                     <div class="form-container" id="sarai-form">
@@ -662,7 +662,7 @@
 
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/city.jpg" alt="Patio City" loading="lazy" class="img-fluid">
+                        <img src="assets/img/projects/city.webp" alt="Patio City" loading="lazy" class="img-fluid">
                       </div>
                     </div>
                     <div class="form-container">
@@ -826,7 +826,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/gardens.jpg" alt="لافيستا" loading="lazy" class="img-fluid">
+                        <img src="assets/img/projects/gardens.webp" alt="لافيستا" loading="lazy" class="img-fluid">
                       </div>
 
                     </div>
@@ -947,7 +947,7 @@
 
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/ray2 (1).jpg" alt="لافيستا" loading="lazy" class="img-fluid">
+                        <img src="assets/img/projects/ray2 (1).webp" alt="لافيستا" loading="lazy" class="img-fluid">
                       </div>
                     </div>
                     <div class="form-container" id="sarai-form">
@@ -1105,7 +1105,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/hikma.jpeg" alt="لافيستا" loading="lazy" class="img-fluid">
+                        <img src="assets/img/projects/hikma.webp" alt="لافيستا" loading="lazy" class="img-fluid">
                       </div>
 
                     </div>
@@ -1223,7 +1223,7 @@
 
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/eastbay.jpeg" alt="لافيستا" loading="lazy" class="img-fluid">
+                        <img src="assets/img/projects/eastbay.webp" alt="لافيستا" loading="lazy" class="img-fluid">
                       </div>
                     </div>
                     <div class="form-container" id="sarai-form">
@@ -1356,7 +1356,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/solA.jpg" alt="لافيستا" loading="lazy" class="img-fluid">
+                        <img src="assets/img/projects/solA.webp" alt="لافيستا" loading="lazy" class="img-fluid">
                       </div>
 
                     </div>
@@ -1685,7 +1685,7 @@
       <div class="row gy-4 foot-navs">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <img src="assets/img/logo.png" loading="lazy" alt="Logo" style="width:150px;">
+            <img src="assets/img/logo (2).webp" loading="lazy" alt="Logo" style="width:150px;">
           </a>
           <div class="footer-contact pt-3">
             <p>
