--- a/index.html
+++ b/index.html
@@ -211,28 +211,28 @@
           <!-- ميزة: شقق وفيلات استلام فوري -->
           <div class="col-xl-3 col-md-6 col-12 feature-item">
             <i class="bi bi-house-check" style="font-size:40px; color:#011E60;"></i>
-            <h5 style="margin-top:10px; font-weight:700; color:#543A14;">شقق وفيلات</h5>
+            <p style="margin-top:10px; font-weight:700; color:#543A14;">شقق وفيلات</p>
             <p style="font-size:14px; color:#555;">استلام فوري</p>
           </div>
 
           <!-- ميزة: المساحات -->
           <div class="col-xl-3 col-md-6 col-12 feature-item">
             <i class="bi bi-bounding-box" style="font-size:40px; color:#011E60;"></i>
-            <h5 style="margin-top:10px; font-weight:700; color:#543A14;">مساحات متنوعة</h5>
+            <p style="margin-top:10px; font-weight:700; color:#543A14;">مساحات متنوعة</p>
             <p style="font-size:14px; color:#555;">تبدأ من 90 م²</p>
           </div>
 
           <!-- ميزة: أقساط -->
           <div class="col-xl-3 col-md-6 col-12 feature-item">
             <i class="bi bi-calendar-check" style="font-size:40px; color:#011E60;"></i>
-            <h5 style="margin-top:10px; font-weight:700; color:#543A14;">أنظمة سداد</h5>
+            <p style="margin-top:10px; font-weight:700; color:#543A14;">أنظمة سداد</p>
             <p style="font-size:14px; color:#555;">أقساط حتى 7 سنوات</p>
           </div>
 
           <!-- ميزة: مقدمات -->
           <div class="col-xl-3 col-md-6 col-12 feature-item">
             <i class="bi bi-cash-stack" style="font-size:40px; color:#011E60;"></i>
-            <h5 style="margin-top:10px; font-weight:700; color:#543A14;">مقدم بسيط</h5>
+            <p style="margin-top:10px; font-weight:700; color:#543A14;">مقدم بسيط</p>
             <p style="font-size:14px; color:#555;">بمقدم يبدأ من 5%</p>
           </div>
 
