--- a/index.html
+++ b/index.html
@@ -38,52 +38,49 @@
 <body class="index-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
-  <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-    <!-- Logo inside link (على اليمين) -->
-    <a href="index.html" class="logo d-flex align-items-center order-1">
-      <img src="assets/img/logo (2).webp" loading="lazy" alt="Logo - الصفحة الرئيسية" style="width:150px;">
-    </a>
+      <!-- Logo inside link (على اليمين) -->
+      <a href="index.html" class="logo d-flex align-items-center order-1">
+        <img src="assets/img/logo (2).webp" loading="lazy" alt="Logo - الصفحة الرئيسية" style="width:150px;">
+      </a>
 
-    <!-- Navigation Menu (يجي في النص) -->
-    <nav id="navmenu" class="navmenu order-2">
-      <ul class="d-flex">
-        <li>
-          <a href="#hero" class="active"
-             style="font-family: 'Cairo', sans-serif; font-size:15px; font-weight:600;">
-             الرئيسية
-          </a>
-        </li>
-        <li>
-          <a href="#about"
-             style="font-family: 'Cairo', sans-serif; font-size:15px; font-weight:600;">
-             من نحن
-          </a>
-        </li>
-        <li>
-          <a href="#features"
-             style="font-family: 'Cairo', sans-serif; font-size:15px; font-weight:600;">
-             مشاريعنا
-          </a>
-        </li>
-        <li>
-          <a href="https://wa.me/201050564000" target="_blank" aria-label="تواصل معنا عبر واتساب"
-             style="font-family: 'Cairo', sans-serif; font-size:15px; font-weight:600; color:#fff; text-decoration:none;">
-             تواصل معنا
-          </a>
-        </li>
-      </ul>
-      <i class="mobile-nav-toggle d-xl-none bi bi-list" aria-label="فتح القائمة"></i>
-    </nav>
+      <!-- Navigation Menu (يجي في النص) -->
+      <nav id="navmenu" class="navmenu order-2">
+        <ul class="d-flex">
+          <li>
+            <a href="#hero" class="active" style="font-family: 'Cairo', sans-serif; font-size:15px; font-weight:600;">
+              الرئيسية
+            </a>
+          </li>
+          <li>
+            <a href="#about" style="font-family: 'Cairo', sans-serif; font-size:15px; font-weight:600;">
+              من نحن
+            </a>
+          </li>
+          <li>
+            <a href="#features" style="font-family: 'Cairo', sans-serif; font-size:15px; font-weight:600;">
+              مشاريعنا
+            </a>
+          </li>
+          <li>
+            <a href="https://wa.me/201050564000" target="_blank" aria-label="تواصل معنا عبر واتساب"
+              style="font-family: 'Cairo', sans-serif; font-size:15px; font-weight:600; color:#fff; text-decoration:none;">
+              تواصل معنا
+            </a>
+          </li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list" aria-label="فتح القائمة"></i>
+      </nav>
 
-    <!-- CTA Button (على الشمال) -->
-    <a class="cta-btn order-3" data-bs-toggle="modal" data-bs-target="#exampleModal"
-       style="font-family: 'Cairo', sans-serif; font-size:16px; font-weight:700;">
-       ابدأ تسجيل
-    </a>
+      <!-- CTA Button (على الشمال) -->
+      <a class="cta-btn order-3" data-bs-toggle="modal" data-bs-target="#exampleModal"
+        style="font-family: 'Cairo', sans-serif; font-size:16px; font-weight:700;">
+        ابدأ تسجيل
+      </a>
 
-  </div>
-</header>
+    </div>
+  </header>
 
 
   <main class="main">
@@ -1716,10 +1713,8 @@
 
           </div>
         </div>
-
-
         <div class="col-lg-2 col-md-3 footer-links" style="color:#fff; font-family:'Cairo', sans-serif;">
-          <h4 style="color:#fff; font-size:18px; font-weight:700; margin-bottom:15px;">القائمة</h4>
+          <p style="color:#fff; font-size:18px; font-weight:700; margin-bottom:15px;">القائمة</p>
           <ul style="list-style:none; padding:0; margin:0;">
             <li style="margin-bottom:10px;">
               <i class="bi bi-chevron-right" style="color:#fff; margin-left:6px;"></i>
