--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>La-Vista Devlopment </title>
-  <meta name="keywords" content="">
+  <meta name="description" content="اكتشف أحدث المشاريع العقارية في Hyde Park. شقق وفيلات للبيع في القاهرة الجديدة بتصميمات عصرية ومواقع مميزة. تواصل معنا الآن للحجز.">
+  <meta name="keywords" content="شقق للبيع, فيلات للبيع, القاهرة الجديدة, هايد بارك, Hyde Park Egypt, عقارات مصر">
+  <meta name="author" content="Hyde Park Properties">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" loading="lazy" rel="icon">
@@ -42,7 +44,7 @@
 
       <!-- Logo inside link (على اليمين) -->
       <a href="index.html" class="logo d-flex align-items-center order-1">
-        <img src="assets/img/logo (2).webp" loading="lazy" alt="Logo - الصفحة الرئيسية" style="width:150px;">
+        <img src="assets/img/logo (2).webp" loading="lazy" alt="Logo" style="width:190px; height:auto;">
       </a>
 
       <!-- Navigation Menu (يجي في النص) -->
@@ -1703,7 +1705,7 @@
       <div class="row gy-4 foot-navs">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <img src="assets/img/logo (2).webp" loading="lazy" alt="Logo" style="width:150px;">
+            <img src="assets/img/logo (2).webp" loading="lazy" alt="Logo" style="width:150px; height:auto;">
           </a>
           <div class="footer-contact pt-3">
             <p>
