--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>La-Vista Devlopment </title>
-  <meta name="description" content="اكتشف أحدث المشاريع العقارية في Hyde Park. شقق وفيلات للبيع في القاهرة الجديدة بتصميمات عصرية ومواقع مميزة. تواصل معنا الآن للحجز.">
+  <meta name="description"
+    content="اكتشف أحدث المشاريع العقارية في Hyde Park. شقق وفيلات للبيع في القاهرة الجديدة بتصميمات عصرية ومواقع مميزة. تواصل معنا الآن للحجز.">
   <meta name="keywords" content="شقق للبيع, فيلات للبيع, القاهرة الجديدة, هايد بارك, Hyde Park Egypt, عقارات مصر">
   <meta name="author" content="Hyde Park Properties">
 
@@ -1806,20 +1807,16 @@
 
     </div>
     <!-- Floating WhatsApp Button -->
-    <a href="https://wa.me/201050564000" target="_blank" style="position: fixed; bottom: 90px; left: 20px; background-color: #25D366; color: white; 
-       width: 55px; height: 55px; border-radius: 50%; display: flex; align-items: center; 
-       justify-content: center; box-shadow: 0px 4px 8px rgba(0,0,0,0.3); font-size: 28px; 
-       z-index: 1000; text-decoration: none;">
+    <a href="https://wa.me/201050564000" target="_blank" class="floating-btn whatsapp-btn"
+      aria-label="تواصل معنا عبر واتساب">
       <i class="bi bi-whatsapp"></i>
     </a>
 
     <!-- Floating Call Button -->
-    <a href="tel:+201050564000" style="position: fixed; bottom: 20px; left: 20px; background-color: #ce2934; color: white; 
-       width: 55px; height: 55px; border-radius: 50%; display: flex; align-items: center; 
-       justify-content: center; box-shadow: 0px 4px 8px rgba(0,0,0,0.3); font-size: 26px; 
-       z-index: 1000; text-decoration: none;">
+    <a href="tel:+201050564000" class="floating-btn call-btn" aria-label="اتصل بنا الآن">
       <i class="bi bi-telephone-fill"></i>
     </a>
+
 
   </footer>
 
