--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <!-- Logo inside link (على اليمين) -->
-      <a href="index.html" class="logo d-flex align-items-center order-1">
-        <img src="assets/img/logo (2).webp" loading="lazy" alt="Logo" style="width:190px; height:auto;">
-      </a>
+      <div class="logo-container">
+        <img src="assets/img/logo (2).webp" alt="Logo" loading="lazy">
+      </div>
+      
 
       <!-- Navigation Menu (يجي في النص) -->
       <nav id="navmenu" class="navmenu order-2">
@@ -1705,9 +1706,10 @@
     <div class="container footer-top">
       <div class="row gy-4 foot-navs">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="index.html" class="logo d-flex align-items-center">
-            <img src="assets/img/logo (2).webp" loading="lazy" alt="Logo" style="width:150px; height:auto;">
-          </a>
+          <div class="logo-container">
+            <img src="assets/img/logo (2).webp" alt="Logo" loading="lazy">
+          </div>
+          
           <div class="footer-contact pt-3">
             <p>
               تأسست شركة لا فيستا للتطوير عام ١٩٩١ على يد المهندس المعماري علاء هادي والمهندس محمد هادي، وتفخر الشركة
