--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="author" content="Hyde Park Properties">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" loading="lazy" rel="icon">
+  <link href="assets/img/favicon.jpg" loading="lazy" rel="icon">
   <link href="assets/img/apple-touch-icon.png" loading="lazy" rel="apple-touch-icon">
 
   <!-- Fonts -->
