--- a/thank_you.html
+++ b/thank_you.html
@@ -120,7 +120,7 @@
         .call-btn {
             bottom: 20px;
             left: 20px;
-            background-color: #ce2934;
+            background-color: #011E60;
         }
     </style>
 </head>
