--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>La-Vista Devlopment </title>
+  <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-PNWLZ9LT');
+  </script>
+
   <meta name="description"
     content="اكتشف أحدث المشاريع العقارية في Hyde Park. شقق وفيلات للبيع في القاهرة الجديدة بتصميمات عصرية ومواقع مميزة. تواصل معنا الآن للحجز.">
   <meta name="keywords" content="شقق للبيع, فيلات للبيع, القاهرة الجديدة, هايد بارك, Hyde Park Egypt, عقارات مصر">
@@ -26,6 +37,11 @@
 </head>
 
 <body class="index-page">
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PNWLZ9LT" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe>
+  </noscript>
+
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
@@ -164,7 +180,7 @@
           </div>
 
           <!-- ميزة: المساحات -->
-          <div class="col-xl-3 col-md-6 col-12 feature-item">
+          <div class="col-xl-3 col-md-6 col-12 feature-item ">
             <i class="bi bi-bounding-box feature-icon"></i>
             <p class="feature-title">مساحات متنوعة</p>
             <p class="feature-desc">تبدأ من 90 م²</p>
@@ -1214,9 +1230,6 @@
                       </form>
                     </div>
                   </div><!-- End Tab Content Item -->
-
-
-
                 </div>
 
               </div>
